--- a/MyApp/src/app/Component/toolbar/toolbar.html
+++ b/MyApp/src/app/Component/toolbar/toolbar.html
@@ -84,7 +84,7 @@ dedicated to pushing the limits of what is achievable.Drawing on our expertise,e
 </div>
 </div>
 
-<div #animatedSection id="service" style="background-color: aliceblue" class="property2 animate-section zoom-in">
+<div #animatedSection id="service" style="background-color: aliceblue" class="property2 animate-section slide-up">
   <h1>Services We Provide</h1>
 <div class="carousel-container">
   <button class="nav-button" (click)="prevSlide()"><mat-icon>chevron_left</mat-icon></button>
@@ -135,7 +135,7 @@ dedicated to pushing the limits of what is achievable.Drawing on our expertise,e
       Problem solvers who thrive in a collaborative environment, creators who want to build scalable products that matter.
       </p>
     </div>
-    <button routerlink mat-raised-button class="career-btn">
+    <button routerLink="/career" routerLinkActive="active" mat-raised-button class="career-btn">
       Explore Now<mat-icon>arrow_forward</mat-icon>
     </button>
   </div>
