--- a/MyApp/src/app/career-component/career-component.html
+++ b/MyApp/src/app/career-component/career-component.html
@@ -1,114 +1,1 @@
-<div class="main">
-  <div class="career-page">
-  <div class="head">
-    <div class="merged">
-      <div>
-        <h2>Aaslin Careers</h2>
-        <p>Find Your Next Job at Aaslin.</p>
-      </div>
-      <div class="searchTitle">
-        <form [formGroup]="searchJob">
-          <input type="text" formControlName="title" placeholder="   Software Engineer">
-          <button mat-button>Search</button>
-        </form>
-      </div>
-    </div>
-
-    <img [src]="careerImageSrc" alt="Career Image" class="careerImage" />
-  </div>
-
-  <div class="carousel-container">
-    <button class="nav-button" (click)="prevSlide()">&#10094;</button>
-    
-    <div class="carousel-track">
-      <div class="card" *ngFor="let card of visibleCards">
-        <mat-card class="example-card" appearance="outlined">
-          <img mat-card-image [src]="card.src" [alt]="card.alt" />
-          <mat-card-content>
-            <h4>{{ card.header }}</h4>
-            <p>{{ card.alt }}</p>
-          </mat-card-content>
-        </mat-card>
-      </div>
-    </div>
-
-    <button class="nav-button" (click)="nextSlide()">&#10095;</button>
-  </div>
-
-<div class="workWithUs">
-  <div class="workHeader">
-    <h2>Work With Us</h2>
-  </div>
-  <div class="workMerge">
-<div class="WorkImg">
-  <img [src]="workWithUsImageSrc" alt="Working With Us" />
-</div>
-  <div class="workContent">
-    <p>{{ workWithUsImageDescription }}</p>
-  </div>
-</div></div>
-
-  <div class="footer">
-    <div class="footHead">
-      <h2>Get In Touch</h2>
-    </div>
-    <div class="footMerge">
-      <form class="footForm" [formGroup]="footerForm">
-        <div class="contactForm">
-          <h3>Contact Form</h3>
-
-          <label>Name:</label>
-          <input type="text" formControlName="name" />
-          <div class="error" *ngIf="footerForm.controls['name'].errors?.['required'] && footerForm.controls['name'].touched">
-            <span>Name is required*</span>
-          </div>
-
-          <label>Email:</label>
-          <input type="email" formControlName="email" />
-          <div class="error" *ngIf="footerForm.controls['email'].touched">
-            <span *ngIf="footerForm.controls['email'].errors?.['required']">Email is required*</span>
-            <span *ngIf="footerForm.controls['email'].errors?.['pattern']">Please enter a valid Email Format*</span>
-          </div>
-
-          <label>Subject:</label>
-          <input type="text" formControlName="subject" />
-          <div class="error" *ngIf="footerForm.controls['subject'].errors?.['required'] && footerForm.controls['subject'].touched">
-            <span>Subject is required*</span>
-          </div>
-
-          <label>Message:</label><br />
-          <textarea formControlName="message"></textarea>
-          <div class="error" *ngIf="footerForm.controls['message'].errors?.['required'] && footerForm.controls['message'].touched">
-            <span>Message is required*</span>
-          </div>
-
-          <button (click)="onSubmit()">Submit</button>
-        </div>
-      </form>
-
-      <div class="get-company">
-        <h3>Company</h3><br />
-        <ul>
-          <li><a href="#aboutus">About Us</a></li>
-          <li><a href="#service">Service</a></li>
-          <li><a href="#team">Teams</a></li>
-          <li><a href="#careers">Careers</a></li>
-          <li><a href="#WhyUs">Why Us</a></li>
-        </ul>
-      </div>
-
-      <div class="get-address">
-        <h3>Address</h3>
-        <p>AASLIN Technologies Private Limited</p>
-        <p>Plot No.4-51-7, 2nd & 3rd Floor,</p>
-        <p>Pavan Adithya, Post Office Road,</p>
-        <p>Lawsons Bay Colony, Pedda Waltair,</p>
-        <p>Visakhapatnam-530017</p>
-      </div>
-    </div>
-  </div>
-
-  <footer class="footCopyRight">
-    © 2025 Copyright by AASLIN Developers. All rights reserved.
-  </footer>
-</div></div>
+<p>Carrer Page Dummy</p>
